[gd_scene load_steps=7 format=3 uid="uid://bldu0ds6vrgb5"]

[ext_resource type="Script" path="res://scenes/level6.gd" id="1_ntg7r"]
[ext_resource type="Texture2D" uid="uid://yclp1uh2p3vr" path="res://sources/level6/1st.png" id="2_641v0"]
[ext_resource type="Texture2D" uid="uid://bjnu107gnhmk2" path="res://sources/level6/5th.png" id="3_y2nqa"]
[ext_resource type="Texture2D" uid="uid://c8ua15uf7vsuc" path="res://sources/level6/4th.png" id="4_8c740"]
[ext_resource type="Texture2D" uid="uid://ffx7enpqbrnl" path="res://sources/level6/3rd.png" id="5_2l1e2"]
[ext_resource type="Texture2D" uid="uid://cc3epfan8ir7e" path="res://sources/level6/2nd.png" id="6_7qmj8"]

[node name="level6" type="Node2D"]
script = ExtResource("1_ntg7r")

[node name="QuestionContainer" type="TextureRect" parent="."]
offset_left = 528.0
offset_top = 183.0
offset_right = 568.0
offset_bottom = 223.0

[node name="QuestionImage" type="TextureRect" parent="QuestionContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnswerContainer" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Answer1" type="TextureButton" parent="AnswerContainer"]
layout_mode = 0
offset_left = 322.0
offset_top = 383.0
offset_right = 386.0
offset_bottom = 447.0
scale = Vector2(0.977323, 0.977323)
texture_normal = ExtResource("2_641v0")

[node name="Answer2" type="TextureButton" parent="AnswerContainer"]
layout_mode = 0
offset_left = 449.0
offset_top = 385.0
offset_right = 513.0
offset_bottom = 449.0
texture_normal = ExtResource("3_y2nqa")

[node name="Answer3" type="TextureButton" parent="AnswerContainer"]
layout_mode = 0
offset_left = 575.0
offset_top = 384.0
offset_right = 639.0
offset_bottom = 448.0
texture_normal = ExtResource("4_8c740")

[node name="Answer4" type="TextureButton" parent="AnswerContainer"]
layout_mode = 0
offset_left = 707.0
offset_top = 383.0
offset_right = 771.0
offset_bottom = 447.0
texture_normal = ExtResource("5_2l1e2")

[node name="Answer5" type="TextureButton" parent="AnswerContainer"]
layout_mode = 0
offset_left = 831.0
offset_top = 383.0
offset_right = 895.0
offset_bottom = 447.0
texture_normal = ExtResource("6_7qmj8")
